# hindsight-clients/go/api/openapi.yaml
@@ -7434,6 +7434,8 @@ components:
             fact_types:
             - world
             - world
+            response_schema:
+              key: ""
             exclude_mental_model_ids:
             - exclude_mental_model_ids
             - exclude_mental_model_ids
@@ -7472,6 +7474,8 @@ components:
             fact_types:
             - world
             - world
+            response_schema:
+              key: ""
             exclude_mental_model_ids:
             - exclude_mental_model_ids
             - exclude_mental_model_ids
@@ -7521,6 +7525,8 @@ components:
           fact_types:
           - world
           - world
+          response_schema:
+            key: ""
           exclude_mental_model_ids:
           - exclude_mental_model_ids
           - exclude_mental_model_ids
@@ -7669,6 +7675,9 @@ components:
         recall_chunks_max_tokens:
           nullable: true
           type: integer
+        response_schema:
+          additionalProperties: {}
+          nullable: true
       title: MentalModelTrigger
     MentalModelTrigger-Output:
       description: Trigger settings for a mental model.
@@ -7689,6 +7698,8 @@ components:
         fact_types:
         - world
         - world
+        response_schema:
+          key: ""
         exclude_mental_model_ids:
         - exclude_mental_model_ids
         - exclude_mental_model_ids
@@ -7762,6 +7773,9 @@ components:
         recall_chunks_max_tokens:
           nullable: true
           type: integer
+        response_schema:
+          additionalProperties: {}
+          nullable: true
       title: MentalModelTrigger
     MinScores:
       description: |-
